<resources>
    <string name="app_name">走兔同城</string>


    <!--main fragment-->
    <string name="activity_main_fragment_service_item">服务项目</string>


    <!--main fragment-->

    <!--main leftmenu-->
    <string name="reg_or_login">请登录/注册</string>
    <string name="my_order">我的订单</string>
    <string name="shareOrderGet"> 分享订单领取优惠</string>
    <string name="defaultAddress">常用地址</string>
    <string name="myMoney">我的钱包</string>
    <string name="message">消息</string>
    <string name="oneUnknowMessage">1条未读消息</string>
    <string name="active">活动</string>
    <string name="doubleForFree">双十一免费送</string>
    <string name="setting">设置</string>
    <string name="hotTelForGov">官方热线</string>
    <string name="sisterForEveryThing">萌妹客服包治百病</string>
    <string name="version">版本号1.0.6</string>
    <string name="exitLogin">退出登入</string>
    <!--main leftmenu-->


    <!--main login-->
    <string name="inputTelNum">请输入手机号码</string>
    <string name="areaNum">+86</string>
    <string name="inputPass">请输入密码</string>
    <string name="loginmeansyouagree">登录表示阁下已同意</string>
    <string name="gotocityserviceitem">走兔同城服务协议</string>
    <string name="login">请登录</string>
    <string name="registerbynoaccount">没有账号?点击注册</string>
    <string name="thirdlogin">第三方登录</string>
    <!--main login-->

    <!--main login reg-->
    <string name="inputConfirmNum">请输入验证码</string>
    <string name="getConfirmNum">获取验证码</string>
    <string name="register">注册</string>
    <!--main login reg-->

    <!--main login thirdlogin-->
    <string name="pleaseInputTheTelWhichWantToBind">请输入要绑定的手机号</string>
    <string name="nextStep">下一步</string>
    <!--main login thirdlogin-->
    <!--main login thirdlogin tel identify-->
    <string name="pleaseInputIdentify">请输入验证码</string>
<!--    <string name="nextStep">下一步</string>-->
    <!--main login thirdlogin tel identify-->


    <!--main addressmanage-->
    <string name="addAddress">添加地址</string>
    <string name="headImageNameTest">胡小姐</string>
    <string name="nameTest">陈先生</string>
    <string name="addressTest">浙江省乐清市柳市镇巴度电商园46号</string>
    <string name="delete">删除</string>
    <string name="telTest">18058378727</string>
    <string name="update">修改</string>
    <!--main addressmanage-->

    <!--main addressmanage add user-->
    <string name="name">姓名</string>
    <string name="tel">号码</string>
    <string name="address">地址</string>
    <string name="nearAddress">附近地址</string>
    <string name="historyRecord">历史记录</string>
    <!--main addressmanage add user-->


    <!--main addressmanage add shop-->
    <string name="nameCall">名称</string>
    <!--main addressmanage add shop-->

    <!--main baidumap common baidu search suggest-->
    <string name="inputsearchaddress">请输入搜索地址</string>
    <!--main baidumap common baidu search suggest-->

    <!--main helpmebuy-->
    <string name="buyAddress">购买地址</string>
    <string name="receiverInfo">收件人信息</string>
    <string name="shoppingOrder">购物清单</string>
    <string name="writeTheBestInfoForTheGoodsPlease">请尽可能详细填写商品名称规格数量等</string>
    <string name="orderRemark">订单备注</string>
    <string name="noChilli">不辣</string>
    <string name="smallChilli">微辣</string>
    <string name="mediaChilli">中辣</string>
    <string name="specialChilli">特辣</string>
    <string name="haveOnion">放葱</string>
    <string name="noOnion">不放葱</string>
    <string name="haveCaraway">放香菜</string>
    <string name="noCaraway">不放香菜</string>
    <string name="haveVinegar">放醋</string>
    <string name="noVinegar">不放醋</string>
    <string name="manualInput">手动输入</string>
    <string name="goodsPrice">商品金额</string>
    <string name="payBySmallTicket">凭购物小票,线下支付</string>
    <string name="unknowPrice">价格未知</string>
    <string name="moneyTest">￥9.0元</string>
    <string name="toPay">去支付</string>
    <!--main helpmebuy-->

    <!--main helpmebuy shoppinglist-->
    <string name="forUpThePasserSpiderPleaseConfirmCareful">为了提高跑腿员配送效率，请阁下再次核对物品</string>
    <string name="writeCarefulTheGoodsNumAndType">请务必详细填写物品规格及数量</string>
    <string name="num">数量</string>
    <string name="price">价格</string>
    <string name="goodsTypes">商品种类</string>
    <string name="point_can_add_goodslist">点击\n可添加购物清单</string>
    <string name="i_konw">朕知道了</string>
    <!--main helpmebuy shoppinglist-->

    <!--main helpmesend-->
    <string name="senderInfo">发件人信息</string>
    <string name="goodsWeight">物品重量</string>
    <string name="senddis">配送里程</string>
    <string name="goodsType">物品种类</string>
    <string name="receiveTime">收件时间</string>
    <!--main helpmesend-->


    <!--main myorder-->
    <string name="searchforinputordernumorkeyword">输入订单号或者关键字查询吧</string>
    <string name="allOrder">全部订单</string>
    <string name="waitForSay">待评价</string>
    <string name="finished">已完成</string>
    <string name="waitForPay">待支付</string>
    <string name="orderNum">订单编号</string>
    <string name="orderTime">下单时间</string>
    <string name="orderTimeTest">2016-01-12 14:25:30</string>
<!--    <string name="toPay">去支付</string>-->
    <!--main myorder-->

    <!--main myorder orderstatus-->
    <string name="paySuccessful">支付成功</string>
    <string name="passerGotOrder">骑手已接单</string>
    <string name="contactTel">联系电话:  </string>
    <string name="passerReachPickPoint">骑手抵达取件点</string>
    <string name="passerReachPiePoint">骑手抵达派件点</string>
    <string name="orderFinish">订单完成</string>
    <string name="passerSpeed">跑腿速度</string>
    <string name="serviceAttitude">服务态度</string>
    <string name="pleaseWriteMoreThanEightWordSuggest">请阁下写下不少于8个字的建议，不吝赐教</string>
    <string name="course">里程</string>
    <string name="time">时间</string>
    <string name="orderStatus">订单状态</string>
    <string name="orderDetail">订单详情</string>

    <string name="peisongxinxi">配送信息</string>
    <string name="orderno">订单编号</string>
    <string name="sendMan">配送人员</string>
    <!--<string name="orderTime">下单时间</string>-->
    <string name="reachTime">送达时间</string>
    <string name="payMethod">支付方式</string>
    <string name="waitToSay">等待评价</string>
    <!--main myorder orderstatus-->

    <!--main common shoufeibiaozhun-->
    <string name="shoufeibiaozhun">收费标准</string>
    <!--main common shoufeibiaozhun-->

    <!--widget popupwindow payconfirmpopup-->
    <string name="payDetail">付款详情</string>
    <string name="orderTotalMoney">订单总金额</string>
    <string name="theWayOfFee">(基础跑腿费7元+额外里程2元/1km)</string>
    <string name="payByAccount">账户支付(推荐使用)</string>
    <string name="accountBanlanceTest">账户余额¥0.0元</string>
    <string name="payByWX">微信支付</string>
    <string name="suggestPayByWXUpfiveVersion">推荐安装微信5.0及以上版本的使用</string>
    <string name="suggestThePeopleWhoHaveZhiFuBaoToPay">推荐有支付宝帐号的用户使用</string>
    <string name="payByZhiFuBao">支付宝支付</string>
    <string name="payIsOK">确认支付</string>
    <!--widget popupwindow payconfirmpopup-->

    <!--widget popupwindow goodstypepopup-->
    <string name="lunch">午餐</string>
    <string name="clothes">衣服</string>
    <string name="flower">鲜花</string>
    <string name="fruits">水果</string>
    <string name="afternoon">下午茶</string>
    <string name="packages">包裹</string>
    <string name="cake">蛋糕</string>
    <string name="articles">生活用品</string>
    <string name="file">文件</string>
    <!--widget popupwindow goodstypepopup-->

    <!--第三方登录 qq 微信-->
    <string name="userid_found">用户信息已存在，正在跳转登录操作…</string>
    <string name="logining">使用%s帐号登录中…</string>
    <string name="auth_cancel">授权操作已取消</string>
    <string name="auth_error">授权操作遇到错误，请阅读Logcat输出</string>
    <string name="auth_complete">授权成功，正在跳转登录操作…</string>

    <!--第三方登录 qq 微信-->


    <!--微信支付-->
    <string name="errcode_success">发送成功</string>
    <string name="errcode_cancel">发送取消</string>
    <string name="errcode_deny">发送被拒绝</string>
    <string name="errcode_unknown">发送返回</string>
    <string name="errcode_unsupported">不支持错误</string>
    <string name="pay_success">支付成功</string>
    <string name="pay_cancel">支付取消</string>
    <string name="pay_deny">支付拒绝</string>
    <!--微信支付-->
</resources>
