<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    >

    <LinearLayout
        android:id="@+id/lly_widget_popupwindow_payconfirmpopup_payconfirm"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/widget_popupwindow_payconfirmpopup_height"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:background="@color/white"

        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/zero"
            android:layout_weight="1"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/payDetail"
                android:textColor="@color/color_widget_popupwindow_confirmpopup_black_word_bg"
                android:textSize="14sp"
                android:layout_centerInParent="true"
                android:textStyle="bold"
                />
            <RelativeLayout
                android:id="@+id/rly_widget_popupwindow_payconfirmpopup_payconfirm_closewin"
                android:layout_width="@dimen/widget_popupwindow_payconfirmpopup_rly_cancel_width"
                android:layout_height="@dimen/widget_popupwindow_payconfirmpopup_rly_cancel_height"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                >
                <ImageView
                    android:layout_width="@dimen/widget_popupwindow_payconfirmpopupp_payconfirm_cancel_ico_width"
                    android:layout_height="@dimen/widget_popupwindow_payconfirmpopupp_payconfirm_cancel_ico_height"
                    android:layout_centerInParent="true"
                    android:background="@drawable/widget_popupwindow_payconfirmpopup_paycancel"
                    />
            </RelativeLayout>
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/zero"
            android:orientation="vertical"
            android:layout_weight="2"
            >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/orderTotalMoney"
                    android:textSize="12sp"
                    android:textColor="@color/color_widget_popupwindow_confirmpopup_black_word_bg"
                    android:layout_marginTop="@dimen/widget_popupwindow_payconfirmpopup_payconfirm_word_margin_top_bottom_size"
                    android:layout_gravity="center_horizontal"
                    />
            <TextView
                android:id="@+id/tv_widget_popupwindow_payconfirmpopup_payconfirm_fee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/moneyTest"
                android:textSize="16sp"
                android:textColor="@color/color_widget_popupwindow_confirmpopup_orange_word_bg"
                android:layout_marginTop="@dimen/widget_popupwindow_payconfirmpopup_payconfirm_word_margin_top_bottom_size"
                android:layout_gravity="center_horizontal"
                />

            <TextView
                android:id="@+id/tv_widget_popupwindow_payconfirmpopup_payconfirm_feedescri"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/theWayOfFee"
                android:textSize="11sp"
                android:textColor="@color/color_widget_popupwindow_confirmpopup_gray_word_bg"
                android:layout_marginTop="@dimen/widget_popupwindow_payconfirmpopup_payconfirm_word_margin_top_bottom_size"
                android:layout_gravity="center_horizontal"
                />
        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/the_split_line_height"
            android:background="@color/color_widget_popupwindow_confirmpopup_gray_word_bg"
            android:layout_alignParentBottom="true"
            />
        <!--账户支付（推荐使用)-->

        <LinearLayout
            android:id="@+id/lly_widget_popupwindow_payconfirmpopup_payconfirm_local"
            android:layout_width="match_parent"
            android:layout_height="@dimen/zero"
            android:layout_weight="1.2"
            >
            <RelativeLayout
                android:layout_width="@dimen/zero"
                android:layout_height="match_parent"
                android:layout_weight="1"
                >
                <ImageView
                    android:layout_width="@dimen/widget_popupwindow_payconfirmpopup_payconfirm_pay_ico_width"
                    android:layout_height="@dimen/widget_popupwindow_payconfirmpopupp_payconfirm_pay_ico_height"
                    android:background="@drawable/widget_popupwindow_payconfirmpopup_paybyaccount"
                    android:layout_centerInParent="true"
                    />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="@dimen/zero"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:orientation="vertical"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/payByAccount"
                    android:textColor="@color/color_widget_popupwindow_confirmpopup_black_word_bg"
                    android:textSize="13sp"
                    android:layout_marginTop="@dimen/widget_popupwindow_payconfirmpopupp_payconfirm_pay_word_margin_top_bottom_size"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/accountBanlanceTest"
                    android:textColor="@color/color_widget_popupwindow_confirmpopup_gray_word_bg"
                    android:textSize="10sp"
                    android:layout_marginTop="@dimen/widget_popupwindow_payconfirmpopupp_payconfirm_pay_second_word_margin_top_bottom_size"
                    />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="@dimen/zero"
                android:layout_height="match_parent"
                android:layout_weight="1"
                >
                <CheckBox
                    android:id="@+id/cb_widget_popupwindow_payconfirmpopup_payconfirm_local"
                    android:layout_width="@dimen/widget_popupwindow_payconfirmpopupp_payconfirm_pay_way_ico_width"
                    android:layout_height="@dimen/widget_popupwindow_payconfirmpopupp_payconfirm_pay_way_ico_height"
                    android:background="@drawable/widget_popupwindow_payconfirmpopup_paywayselect"
                    android:layout_centerInParent="true"
                    android:button="@null"
                    />
            </RelativeLayout>
        </LinearLayout>
        <!--账户支付（推荐使用)-->
        <!--我是分割线-->
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/the_split_line_height"
            android:background="@color/color_widget_popupwindow_confirmpopup_gray_word_bg"
            />
        <!--我是分割线-->
        <!--微信支付-->
        <LinearLayout
            android:id="@+id/lly_widget_popupwindow_payconfirmpopup_payconfirm_wx"
            android:layout_width="match_parent"
            android:layout_height="@dimen/zero"
            android:layout_weight="1.2"
            android:orientation="horizontal"
            >

            <RelativeLayout
                android:layout_width="@dimen/zero"
                android:layout_height="match_parent"
                android:layout_weight="1"
                >
                <ImageView
                    android:layout_width="@dimen/widget_popupwindow_payconfirmpopup_payconfirm_pay_ico_width"
                    android:layout_height="@dimen/widget_popupwindow_payconfirmpopupp_payconfirm_pay_ico_height"
                    android:background="@drawable/widget_popupwindow_payconfirmpopup_paybywx"
                    android:layout_centerInParent="true"
                    />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="@dimen/zero"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:orientation="vertical"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/payByWX"
                    android:textColor="@color/color_widget_popupwindow_confirmpopup_black_word_bg"
                    android:textSize="13sp"
                    android:layout_marginTop="@dimen/widget_popupwindow_payconfirmpopupp_payconfirm_pay_word_margin_top_bottom_size"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/suggestPayByWXUpfiveVersion"
                    android:textColor="@color/color_widget_popupwindow_confirmpopup_gray_word_bg"
                    android:textSize="10sp"
                    android:layout_marginTop="@dimen/widget_popupwindow_payconfirmpopupp_payconfirm_pay_second_word_margin_top_bottom_size"
                    />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="@dimen/zero"
                android:layout_height="match_parent"
                android:layout_weight="1"
                >
                <CheckBox
                    android:id="@+id/cb_widget_popupwindow_payconfirmpopup_payconfirm_wx"
                    android:layout_width="@dimen/widget_popupwindow_payconfirmpopupp_payconfirm_pay_way_ico_width"
                    android:layout_height="@dimen/widget_popupwindow_payconfirmpopupp_payconfirm_pay_way_ico_height"
                    android:background="@drawable/widget_popupwindow_payconfirmpopup_paywaynormal"
                    android:layout_centerInParent="true"
                    android:button="@null"
                    />
            </RelativeLayout>
        </LinearLayout>
        <!--微信支付-->

        <!--我是分割线-->
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/the_split_line_height"
            android:background="@color/color_widget_popupwindow_confirmpopup_gray_word_bg"
            />
        <!--我是分割线-->


        <!--支付宝支付-->

        <LinearLayout
            android:id="@+id/lly_widget_popupwindow_payconfirmpopup_payconfirm_zfb"
            android:layout_width="match_parent"
            android:layout_height="@dimen/zero"
            android:layout_weight="1.2"
            >
            <RelativeLayout
                android:layout_width="@dimen/zero"
                android:layout_height="match_parent"
                android:layout_weight="1"
                >
                <ImageView
                    android:layout_width="@dimen/widget_popupwindow_payconfirmpopup_payconfirm_pay_ico_width"
                    android:layout_height="@dimen/widget_popupwindow_payconfirmpopupp_payconfirm_pay_ico_height"
                    android:background="@drawable/widget_popupwindow_payconfirmpopup_paybyzhifubao"
                    android:layout_centerInParent="true"
                    />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="@dimen/zero"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:orientation="vertical"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/payByZhiFuBao"
                    android:textColor="@color/color_widget_popupwindow_confirmpopup_black_word_bg"
                    android:textSize="13sp"
                    android:layout_marginTop="@dimen/widget_popupwindow_payconfirmpopupp_payconfirm_pay_word_margin_top_bottom_size"

                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/suggestThePeopleWhoHaveZhiFuBaoToPay"
                    android:textColor="@color/color_widget_popupwindow_confirmpopup_gray_word_bg"
                    android:textSize="10sp"
                    android:layout_marginTop="@dimen/widget_popupwindow_payconfirmpopupp_payconfirm_pay_second_word_margin_top_bottom_size"
                    />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="@dimen/zero"
                android:layout_height="match_parent"
                android:layout_weight="1"
                >
                <CheckBox
                    android:id="@+id/cb_widget_popupwindow_payconfirmpopup_payconfirm_zfb"
                    android:layout_width="@dimen/widget_popupwindow_payconfirmpopupp_payconfirm_pay_way_ico_width"
                    android:layout_height="@dimen/widget_popupwindow_payconfirmpopupp_payconfirm_pay_way_ico_height"
                    android:background="@drawable/widget_popupwindow_payconfirmpopup_paywaynormal"
                    android:layout_centerInParent="true"
                    android:button="@null"
                    />
            </RelativeLayout>
        </LinearLayout>
        <!--支付宝支付-->

        <RelativeLayout
            android:id="@+id/rly_widget_popupwindow_payconfirmpopup_payconfirm_querypay"
            android:layout_width="match_parent"
            android:layout_height="@dimen/widget_popupwindow_payconfirmpopupp_bottombar_zhifu_height"
            android:background="@color/color_widget_popupwindow_confirmpopup_black_word_bg"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/payIsOK"
                android:textSize="15sp"
                android:textColor="@color/color_widget_popupwindow_confirmpopup_green_word_bg"
                android:textStyle="bold"
                android:layout_centerInParent="true"
                />

        </RelativeLayout>

    </LinearLayout>
</RelativeLayout>