<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="@dimen/activity_main_addressmanage_add_user_tabbar_vp_rv_item_height"
    android:background="@color/color_activity_main_addressmanage_add_user_content_tabbar_black_bg"
    android:id="@+id/lly_helpmebuyadd_receiverdetail_content_vp_itemrv_item_total"
    >
    <RelativeLayout
        android:layout_width="@dimen/zero"
        android:layout_height="match_parent"
        android:layout_weight="1"
        >
        <ImageView
            android:layout_width="@dimen/activity_main_addressmanage_add_user_tabbar_ico_width"
            android:layout_height="@dimen/activity_main_addressmanage_add_user_tabbar_ico_height"
            android:background="@drawable/activity_main_addressmanage_add_user_historyrecord"
            android:layout_centerInParent="true"
            />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="@dimen/zero"
        android:layout_height="match_parent"
        android:layout_weight="6"
        android:orientation="vertical"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/zero"
            android:layout_weight="1"
            android:visibility="gone"
            >
            <TextView
                android:id="@+id/tv_helpmesendaddcontacter_tab_vp_rv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nameTest"
                android:textColor="@color/color_activity_main_addressmanage_add_user_tabbar_white_bg"
                android:layout_centerVertical="true"
                android:textSize="13sp"
                />

            <TextView
                android:id="@+id/tv_helpmesendaddcontacter_tab_vp_rv_tel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/telTest"
                android:textColor="@color/color_activity_main_addressmanage_add_user_tabbar_white_bg"
                android:layout_centerVertical="true"
                android:textSize="13sp"
                android:layout_toRightOf="@id/tv_helpmesendaddcontacter_tab_vp_rv_name"
                android:layout_marginLeft="20dp"
                />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/zero"
            android:layout_weight="1"
            >
            <TextView
                android:id="@+id/tv_helpmebuyadd_receiverdetail_content_vp_itemrv_item_addr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/addressTest"
                android:textColor="@color/color_activity_main_addressmanage_add_user_tabbar_gray_bg"
                android:layout_centerVertical="true"
                android:textSize="13sp"
                />
        </RelativeLayout>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/the_split_line_height"
            android:background="@color/color_activity_main_addressmanage_add_user_tabbar_gray_bg"
            />
    </LinearLayout>
</LinearLayout>